Updated mSANNP code files