@@ -1,67 +1,99 @@
 package com.fspann.common;
 
 import java.io.Serializable;
-import java.util.*;
+import java.util.List;
+import java.util.Objects;
 
+/**
+ * EncryptedPoint: An encrypted vector with metadata.
+ *
+ * Implements Serializable for persistence via PersistenceUtils.
+ */
 public class EncryptedPoint implements Serializable {
     private static final long serialVersionUID = 1L;
 
     private final String id;
-    private final int shardId;
+    private final int version;
     private final byte[] iv;
     private final byte[] ciphertext;
-    private final int version;
-    private final int vectorLength;
-    private final List<Integer> buckets;
-    private transient int _hc;
+    private final int keyVersion;
+    private final int dimension;
+    private final int shardId;  // <-- NEW: for data sharding
+    private final List<Integer> buckets;  // <-- NEW: for LSH bucket IDs
+    private final List<String> metadata;
 
-    public EncryptedPoint(String id, int shardId, byte[] iv, byte[] ciphertext, int version, int vectorLength, List<Integer> buckets) {
-        this.id = Objects.requireNonNull(id, "ID must not be null");
-        this.shardId = shardId;
-        this.iv = Objects.requireNonNull(iv, "IV must not be null").clone();
-        this.ciphertext = Objects.requireNonNull(ciphertext, "Ciphertext must not be null").clone();
-        if (version < 0) throw new IllegalArgumentException("Version must be non-negative");
-        if (vectorLength <= 0) throw new IllegalArgumentException("Vector length must be positive");
+    /**
+     * Full constructor with all fields.
+     */
+    public EncryptedPoint(
+            String id,
+            int version,
+            byte[] iv,
+            byte[] ciphertext,
+            int keyVersion,
+            int dimension,
+            int shardId,
+            List<Integer> buckets,
+            List<String> metadata
+    ) {
+        this.id = Objects.requireNonNull(id, "id cannot be null");
         this.version = version;
-        this.vectorLength = vectorLength;
-        this.buckets = buckets != null ? Collections.unmodifiableList(new ArrayList<>(buckets)) : Collections.emptyList();
+        this.iv = Objects.requireNonNull(iv, "iv cannot be null");
+        this.ciphertext = Objects.requireNonNull(ciphertext, "ciphertext cannot be null");
+        this.keyVersion = keyVersion;
+        this.dimension = dimension;
+        this.shardId = shardId;
+        this.buckets = (buckets != null) ? buckets : List.of();
+        this.metadata = (metadata != null) ? metadata : List.of();
     }
+
+    /**
+     * Convenience constructor (backward compatible - default shardId=0, empty buckets).
+     */
+    public EncryptedPoint(
+            String id,
+            int version,
+            byte[] iv,
+            byte[] ciphertext,
+            int keyVersion,
+            int dimension,
+            List<String> metadata
+    ) {
+        this(id, version, iv, ciphertext, keyVersion, dimension, 0, List.of(), metadata);
+    }
+
+    // ==================== GETTERS ====================
 
     public String getId() { return id; }
-    public int getShardId() { return shardId; }
-    public byte[] getIv() { return iv.clone(); }
-    public byte[] getCiphertext() { return ciphertext.clone(); }
     public int getVersion() { return version; }
-    public int getVectorLength() { return vectorLength; }
-    public List<Integer> getBuckets() { return new ArrayList<>(buckets); }
-
-    @Override
-    public boolean equals(Object o) {
-        if (this == o) return true;
-        if (!(o instanceof EncryptedPoint)) return false;
-        EncryptedPoint that = (EncryptedPoint) o;
-        return shardId == that.shardId &&
-                version == that.version &&
-                vectorLength == that.vectorLength &&
-                Objects.equals(id, that.id) &&
-                Arrays.equals(iv, that.iv) &&
-                Arrays.equals(ciphertext, that.ciphertext) &&
-                Objects.equals(buckets, that.buckets);
-    }
-
-    @Override public int hashCode() {
-        int h = _hc;
-        if (h == 0) {
-            h = Objects.hash(id, shardId, version, vectorLength, buckets);
-            h = 31*h + Arrays.hashCode(iv);
-            h = 31*h + Arrays.hashCode(ciphertext);
-            _hc = (h == 0 ? 1 : h);
-        }
-        return _hc;
-    }
+    public byte[] getIv() { return iv; }
+    public byte[] getCiphertext() { return ciphertext; }
+    public int getKeyVersion() { return keyVersion; }
+    public int getDimension() { return dimension; }
+    public int getVectorLength() { return dimension; }  // Alias
+    public int getShardId() { return shardId; }  // <-- NEW
+    public List<Integer> getBuckets() { return buckets; }  // <-- NEW
+    public List<String> getMetadata() { return metadata; }
 
     @Override
     public String toString() {
-        return String.format("EncryptedPoint[id=%s, shard=%d, version=%d, dim=%d]", id, shardId, version, vectorLength);
+        return String.format(
+                "EncryptedPoint{id=%s, v=%d, dim=%d, shard=%d, buckets=%d, ctLen=%d}",
+                id, version, dimension, shardId, buckets.size(), ciphertext.length
+        );
+    }
+
+    @Override
+    public boolean equals(Object obj) {
+        if (this == obj) return true;
+        if (!(obj instanceof EncryptedPoint that)) return false;
+        return Objects.equals(id, that.id)
+                && version == that.version
+                && dimension == that.dimension;
+    }
+
+    @Override
+    public int hashCode() {
+        return Objects.hash(id, version, dimension);
     }
 }
